--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "@types/react": "19.1.12",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "prisma": "^6.15.0"
+    "prisma": "^6.15.0",
+    "typescript": "^5.6.3",
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0"
   }
 }
