--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "typescript": "^5.6.3",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0"
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^9.9.0",
+    "eslint-config-next": "15.5.2"
   }
 }
