--- a/package.json
+++ b/package.json
@@ -12,20 +12,31 @@
     "schema": "prisma/schema.prisma"
   },
   "dependencies": {
+    "@changey/react-leaflet-markercluster": "^4.0.0-rc1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@prisma/client": "^6.15.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@turf/bbox": "^7.2.0",
+    "@turf/centroid": "^7.2.0",
+    "@turf/convex": "^7.2.0",
+    "@turf/helpers": "^7.2.0",
+    "@turf/turf": "^7.2.0",
     "@types/node": "^20.19.13",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
+    "leaflet": "^1.9.4",
     "next": "15.5.2",
+    "pigeon-maps": "^0.22.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0",
     "typescript": "^5.6.3",
     "xlsx": "^0.18.5"
   },
