--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.544.0",
     "next": "15.5.2",
+    "pdf-lib": "^1.17.1",
     "pigeon-maps": "^0.22.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
