--- a/package.json
+++ b/package.json
@@ -27,19 +27,19 @@
     "@turf/helpers": "^7.2.0",
     "@turf/turf": "^7.2.0",
     "@types/node": "^20.19.13",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^19.2.1",
+    "@types/react-dom": "^19.2.1",
     "docx": "^9.5.1",
     "file-saver": "^2.0.5",
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
-    "next": "15.5.2",
+    "next": "^16.0.8",
     "pdf-lib": "^1.17.1",
     "pigeon-maps": "^0.22.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-leaflet": "^5.0.0",
     "typescript": "^5.6.3",
     "xlsx": "^0.18.5"
@@ -47,7 +47,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "eslint": "^9.9.0",
-    "eslint-config-next": "15.5.2",
+    "eslint-config-next": "^16.0.8",
     "prisma": "^6.15.0"
   }
 }
