--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "NODE_OPTIONS=--dns-result-order=ipv4first next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "prisma:local": "dotenv -e .env.local -- prisma",
+    "prisma:migrate": "dotenv -e .env.local -- prisma migrate dev",
+    "prisma:studio": "dotenv -e .env.local -- prisma studio",
+    "prisma:generate": "dotenv -e .env.local -- prisma generate",
+    "seed": "node seed-fake-users.js"
   },
   "prisma": {
     "schema": "prisma/schema.prisma"
@@ -30,6 +35,7 @@
     "@types/react": "^19.2.1",
     "@types/react-dom": "^19.2.1",
     "docx": "^9.5.1",
+    "dotenv": "^17.2.3",
     "file-saver": "^2.0.5",
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
@@ -46,6 +52,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9.9.0",
     "eslint-config-next": "^16.0.10",
     "prisma": "^6.15.0"
